--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,4 +2,6 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 00_core.ipynb
+      - section: blog
+        contents:
+          - blog/index.qmd
