--- a/settings.ini
+++ b/settings.ini
@@ -1,43 +1,35 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = ffc
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = ffc
+version = 0.0.2
 min_python = 3.7
 license = mit
-
-### nbdev ###
 doc_path = _docs
 lib_path = ffc
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = False
-
-### Docs ###
 branch = main
 custom_sidebar = True
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-; title = %(lib_name)s
-title = %(description)s
-
-### PyPI ###
+doc_host = https://fredguth.github.io
+doc_baseurl = /ffc
+git_url = https://github.com/fredguth/ffc
+title = ffc
 audience = Developers
 author = Fred Guth
 author_email = fredguth@fredguth.com
-copyright = 2022 onwards, %(author)s
+copyright = 2022 onwards, Fred Guth
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = fredguth
 description = Fred's fast.ai cookbook
+black_formatting = False
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
 
-### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
-# console_scripts =
