--- a/nbs/_quarto.yml
+++ b/nbs/_quarto.yml
@@ -3,7 +3,9 @@ project:
 
 format:
   html:
-    theme: cosmo
+    theme:
+      - cosmo
+      - custom.scss
     css: styles.css
     toc: true
     toc-depth: 4
