--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -1,7 +1,12 @@
 website:
   sidebar:
     contents:
-      - index.ipynb
-      - section: blog
+      - section: Welcome
+        contents:
+          - index.ipynb
+      - section: Course 2022
+        contents:
+          - course22/index.qmd
+      - section: Blog
         contents:
           - blog/index.qmd
