--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ recursive = True
 tst_flags = notest
 put_version_in_init = False
 branch = main
-custom_sidebar = True
+custom_sidebar = False
 doc_host = https://fredguth.github.io
 doc_baseurl = /ffc
 git_url = https://github.com/fredguth/ffc
