--- a/nbs/blog/posts/_metadata.yml
+++ b/nbs/blog/posts/_metadata.yml
@@ -2,3 +2,5 @@ title-block-banner: "#fcf9ef"
 title-block-banner-color: body
 toc-location: left
 search: false
+page-layout: article
+fig-cap-location: margin
