--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,7 +2,8 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 00_core.ipynb
+      - 00_utils.ipynb
+      - 01_vision.segmentation.binary.ipynb
       - section: blog
         contents:
           - blog/index.qmd
@@ -11,6 +12,13 @@ website:
               - section: 2022-09-26
                 contents:
                   - blog/posts/2022-09-26/index.qmd
+      - section: blog
+        contents:
+          - section: posts
+            contents:
+              - section: 2022-10-11
+                contents:
+                  - blog/posts/2022-10-11/index.qmd
       - section: blog
         contents:
           - section: posts
