--- a/settings.ini
+++ b/settings.ini
@@ -24,7 +24,6 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = fredguth
-description = Fred's fast.ai cookbook
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
@@ -32,4 +31,6 @@ allowed_cell_metadata_keys =
 jupyter_hooks = True
 clean_ids = True
 clear_all = False
+output-dir = _site
+description = Fred's fast.ai cookbook
 
